k8s/ingress-controller/ingress-nginx-controller/app- abtest-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1-abtest-ingress
  namespace: ingress-nginx-controller-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1-service
                port:
                  number: 80
  tls:
    - hosts:
        - app.example.local
      secretName: certificate-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v2-abtest-ingress
  namespace: ingress-nginx-controller-ns
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "group"
    nginx.ingress.kubernetes.io/canary-by-header-value: "beta-test-users"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v2-service
                port:
                  number: 80
  tls:
    - hosts:
        - app.example.local
      secretName: certificate-secret
