k8s/ingress-controller/ingress-nginx-controller/app-canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1-canary-ingress
  namespace: ingress-nginx-controller-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.canary.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v2-canary-ingress
  namespace: ingress-nginx-controller-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" # 50% do tráfego para o app-v2
spec:
  ingressClassName: nginx
  rules:
    - host: app.canary.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v2-service
                port:
                  number: 80
